--- a/config.json
+++ b/config.json
@@ -29,6 +29,12 @@
 		},
 		"prefs": {
 			"version": "2.0"
+		},
+		"topbar": {
+			"version": "2.4"
+		},
+		"tabbar": {
+			"version": "2.2"
 		}
 	},
 	"platform_version": "v2.0.4",
